--- a/package.json
+++ b/package.json
@@ -15,19 +15,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.8.3",
+    "bootstrap": "^5.3.1",
     "next": "13.2.3",
+    "next-query-params": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.10.1",
+    "react-responsive-modal": "^6.4.2",
+    "typescript": "4.9.5",
+    "use-query-params": "^2.1.2"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.15",
     "concurrently": "^7.6.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "json-server": "^0.17.2",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "yarn-check": "^0.0.3"
   }
 }
